<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:scrollbarStyle="insideInset">

    <include layout="@layout/view_camera_and_title"></include>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"
        style="?android:listSeparatorTextViewStyle"/>

    <com.github.skydoves.ElasticButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/crime_date_button"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:padding="@dimen/widget_padding"
        android:background="@drawable/ripple"
        app:button_backgroundColor="#30354b"
        app:button_round="20"
        app:button_scale="0.8"
        app:button_duration="300"
        app:button_labelText="@string/date_picker_title"
        app:button_labelColor="#ffffff"
        app:button_labelSize="16"
        app:button_labelStyle="bold"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/crime_solved_label"
        android:id="@+id/crime_solved_check_box"/>

    <com.github.skydoves.ElasticButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/crime_suspect_button"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:padding="@dimen/widget_padding"
        android:background="@drawable/ripple"
        app:button_backgroundColor="#30354b"
        app:button_round="20"
        app:button_scale="0.8"
        app:button_duration="300"
        app:button_labelText="@string/crime_suspect_text"
        app:button_labelColor="#ffffff"
        app:button_labelSize="16"
        app:button_labelStyle="bold"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

    <com.github.skydoves.ElasticButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/crime_report_button"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:padding="@dimen/widget_padding"
        android:background="@drawable/ripple"
        app:button_backgroundColor="#30354b"
        app:button_round="20"
        app:button_scale="0.8"
        app:button_duration="300"
        app:button_labelText="@string/crime_report_text"
        app:button_labelColor="#ffffff"
        app:button_labelSize="16"
        app:button_labelStyle="bold"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <com.github.skydoves.ElasticButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/crime_delete_button"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:padding="@dimen/widget_padding"
        android:background="@drawable/ripple"
        app:button_backgroundColor="#30354b"
        app:button_round="20"
        app:button_scale="0.8"
        app:button_duration="300"
        app:button_labelText="@string/crime_title_delete"
        app:button_labelColor="#ffffff"
        app:button_labelSize="16"
        app:button_labelStyle="bold"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

</LinearLayout>